--- a/src/styles/Global.scss
+++ b/src/styles/Global.scss
@@ -29,10 +29,11 @@ body {
     padding: 0px;
     .header {
       max-width: 70%;
-      height: 100px;
+      height: 200px;
     }
     .titlen{
       display: none;
+      content: 'Serphp';
     }
     .headermenu {
       display: none;
@@ -137,10 +138,10 @@ body {
 
 .header2 .container .img-holder {
   height: 100%;
-  align-self: flex-end;
-  flex-grow: 1;
+  //align-self: flex-end;
+  //flex-grow: 1;
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   padding-left: 0px;
 }
 
@@ -154,7 +155,7 @@ body {
 }
 
 //MOBILE DESIGN
-@media (max-width: 491.98px) {
+@media (max-width: 600px) {
   .header2 .container .infos .subtitle {
     margin-bottom: 0;
     font-size: 16px;
@@ -166,7 +167,7 @@ body {
     font-weight: bold;
   }
   .header2 .container {
-    height: 80%;
+    //height: 80%;
     display: flex;
     align-items: center;
   }
@@ -174,10 +175,9 @@ body {
     height: 55vh;
     min-height: 450px;
   }
-  
 }
 
-@media (max-width: 991.98px) {
+@media (max-width: 1000px) {
   .header2 .container {
     -webkit-box-pack: center;
     -webkit-justify-content: center;
@@ -342,7 +342,7 @@ h6 {
   width: 100%;
   text-align: center;
   //margin-left: 5px;
-  margin: 5px;
+  margin: 10px;
   .h7 {
     width: 100%;
     text-align: right;
@@ -606,13 +606,9 @@ footer {
 
 /* ICONS EXPERIENCES */
 .conteinericon {
-  //display: flex;
-  width: 20%;
-  height: 38px;
+  height: 30px;
   padding: 1px;
   opacity: 0.7;
-  //flex-flow: row wrap;
-  //justify-content: center;
   transition: transform 0.4s ease-in;
   &:hover {
     transform: scale(1.03);
